# eduRen

./: .gitignore  README.md
c++/: CMakeLists.txt
c++/mesh/: Makefile  build.sh  camera.h  draw.cpp  draw.h  eduRen  main.vert
c++/mesh/imgui/: imgui.ini
c++/src/: CMakeLists.txt  camera.h  cube.cpp  cube.h  draw.cpp  draw.h  eduRen  format.sh  imgui.ini  input_handler.cpp  input_handler.h  main.cpp  misc.cpp  misc.h  run.sh  wc.sh
c++/src/shaders/: blur.frag  blur.vert  debugCubeShadowMap.frag  debugCubeShadowMap.vert  deferredGeomPath.frag  deferredGeomPath.vert  deferredLightPath.frag  deferredLightPath.vert  env_map_color.frag  env_map_color.vert  equirectangularMap.frag  ibl_irradiance.frag  ibl_prefilter.frag  light.frag  light.vert  main.frag  main.vert  main_col.frag  main_textured.frag  normal.frag  normal.geom  normal.vert  pbrIBL.frag  pbrIBL.vert  pbrPoint.frag  rect2d.frag  rect2d.vert  screen.frag  screen.vert  shadowCubeMap.frag  shadowCubeMap.geom  shadowCubeMap.vert  shadowMap.frag  shadowMap.vert  skybox.frag  ssao.frag
rust/: :  Cargo.toml  TODO  imgui.ini
rust/shaders/: simple_150.glslv
rust/src/: imgui.ini  main.rs
rust/src/camera/: mod.rs
rust/src/render/: mod.rs  model.rs
rust/src/support_gfx/: mod.rs
