[package]

name = "edu_ren"
version = "0.0.1"
authors = [ "mshvorak@gmail.com" ]

[dependencies]

glm = "0.2.3"
imgui = "0.0.18"

gfx = "0.16"
gfx_window_glutin = "0.19"
glium = { version = "0.19", default-features = true }
glutin = "0.11"
imgui-gfx-renderer = { version = "0.0.18"}
imgui-glium-renderer = { version = "0.0.18" }
num-traits = "*"
assimp-sys = "0.3.1"
